# agent-secret-redactor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
daemon/: README.md  pyproject.toml
daemon/src/agent_secret_redactor_daemon/: __init__.py  server.py
daemon/tests/: test_daemon.py  test_daemon_lifecycle.py
src/agent_secret_redactor/: __init__.py  cli.py  config.py  engine.py  invisible.py
src/agent_secret_redactor/data/: secret-detectors.json
tests/: conftest.py  test_cli.py  test_config.py  test_crossline.py  test_detectors.py  test_engine.py  test_invisible.py  test_property.py
