[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-secret-redactor-daemon"
version = "0.1.0"
description = "Optional Unix-socket daemon for agent-secret-redactor: configure detect-secrets once, redact many."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Alexander Turner" }]
keywords = ["secrets", "redaction", "daemon", "unix-socket", "agent", "security"]
dependencies = ["agent-secret-redactor>=0.1.0"]

[project.urls]
Homepage = "https://github.com/alexander-turner/agent-secret-redactor"
Repository = "https://github.com/alexander-turner/agent-secret-redactor"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
agent-secret-redactor-daemon = "agent_secret_redactor_daemon.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_secret_redactor_daemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agent_secret_redactor_daemon"]

[tool.coverage.report]
show_missing = true
fail_under = 100
